--- a/style/style.css
+++ b/style/style.css
@@ -52,7 +52,27 @@
   background-size: cover;
   background-position: center;
 }
+#virtual-tour {
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; /* Optional: Remove if parallax effect is not needed */
+}
 
+#panorama {
+  width: 100%;
+  height: 500px;
+}
+
+@media (max-width: 768px) {
+  #panorama {
+      height: 300px;
+  }
+}
+@media (max-width: 768px) {
+  #virtual-tour {
+      background-image: url('https://images.unsplash.com/photo-1426604966848-d7adac402bff?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  }
+}
 .contact-section {
   margin-bottom: 20px;
 }
