--- a/style/style.css
+++ b/style/style.css
@@ -142,3 +142,15 @@ footer {
   font-size: 2.5rem;
   color: #333;
 }
+.reservation-form {
+  margin: 50px auto;
+  padding: 30px;
+  background: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.form-title {
+  text-align: center;
+  margin-bottom: 30px;
+  font-weight: bold;
+}   
